# fitstoolz

./: .readthedocs.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: python-package.yml  release.yml
docs/source/: conf.py  installation.rst
fitstoolz/: __init__.py  reader.py  utils.py
fitstoolz/apps/: __init__.py  add_axis.py  header.py  lazy_group.py  main.py  remove_axis.py  slice.py  stack.py  stats.py  unstack.py
fitstoolz/apps/parser_configs/: add-axis.yaml  base.yaml  header.yaml  remove-axis.yaml  slice.yaml  stack.yaml  stats.yaml  unstack.yaml
fitstoolz/scripts/: __init__.py  main.py  stack.py
src/fitstoolz/apps/: unstack.py
src/fitstoolz/apps/parser_configs/: slice.yaml
tests/: __init__.py  expand_axes_tests.py  test_apps.py  test_celestial_coords.py  test_expand_axes.py  test_reader.py  test_utils.py
