[project]
name = "fitstoolz"
version = "0.0.1b2"
description = "Python libraries for interfacing with FITS data in an intuitive way"
authors = [
    {name="Sphesihle Makhathini", email="sphemakh@gmail.com"},
]
maintainers = [
    {name="Mika Naidoo", email="mika.naidoo25@gmail.com"},
    {name="Athanaseus Ramaila", email="armaila@sarao.ac.za"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.rst"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.0",
    "dask[array] >=2023.1.1",
    "xarray >=2023.01.0",
    "astropy>=7.0,<8.0",
    "scabha @ git+https://github.com/caracal-pipeline/scabha",
]

[project.optional-dependencies]
zarr = ["zarr>=2.12.0"]

[tool.hatch.build.targets.wheel]
include = ["fitstoolz"]

[project.scripts]
fitstoolz = "fitstoolz.scripts:cli"


[dependency-groups]
tests = [
    "pytest>=7.1.3,<8.0",
    "flake8",
    "matplotlib",
]

docs = [
    "Sphinx>=7.0,<9.0",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "sphinx_click",
    "sphinx-autodoc-typehints",
    "docutils",
]

dev = [
    "jupyter",
    "matplotlib",
]

[project.urls]
Documentation = "https://fitstoolz.readthedocs.org"
Repository = "https://github.com/caracal-pipeline/fitstoolz.git"
"Issue Tracker" = "https://github.com/caracal-pipeline/fitstoolz/issues"

