[project]
name = "fitstoolz"
version = "0.1.0b3"
description = "Python libraries for interfacing with FITS data in an intuitive way"
authors = [
    {name="Sphesihle Makhathini", email="sphemakh@gmail.com"},
]
maintainers = [
    {name="Mika Naidoo", email="mika.naidoo25@gmail.com"},
    {name="Athanaseus Ramaila", email="armaila@sarao.ac.za"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.rst"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.0",
    "dask[array] >=2023.1.1",
    "xarray >=2023.01.0",
    "astropy>=7.0,<8.0",
    "scabha>=2.2.0rc2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/fitstoolz", "tests", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/fitstoolz"]

[project.scripts]
fitstoolz = "fitstoolz.apps.main:cli"



[dependency-groups]

ruff = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
]

tests = [
    "pytest>=7.1.3",
    "pytest-cov>=5.0",
    {include-group = "ruff"},
]

docs = [
    "Sphinx>=7.0,<9.0",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "sphinx_click",
    "sphinx-autodoc-typehints",
    "docutils",
]

dev = [
    "jupyter",
    "matplotlib",
    {include-group = "ruff"},
]

[project.urls]
Documentation = "https://fitstoolz.readthedocs.org"
Repository = "https://github.com/caracal-pipeline/fitstoolz.git"
"Issue Tracker" = "https://github.com/caracal-pipeline/fitstoolz/issues"
